src/tests/errors/syntax/004.ura
// parse_errors/010 — empty index expression `[]`
use "@/header"

main():
    arr array[int] = stack[int](3)
    x int = arr[]