src/tests/errors/syntax/004.err
[1m[0;31merror: [0munexpected token in expression
  [1m[34m-->[0m src/tests/errors/syntax/004.ura:6:17
  [1m[34m|[0m
[1m[34m6 |[0m     x int = arr[]
  [1m[34m|[0m                 [1;31m^[0m
[1m[0;31merror: [0mexpected ']' to close index access
  [1m[34m-->[0m src/tests/errors/syntax/004.ura:6:16
  [1m[34m|[0m
[1m[34m6 |[0m     x int = arr[]
  [1m[34m|[0m                [1;31m^[0m
